--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       LETSENCRYPT_HOST: ${HOSTNAME}
       LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
       GITLAB_OMNIBUS_CONFIG: |
-        external_url ${HOSTNAME}
+        external_url 'https://${HOSTNAME}'
         letsencrypt['enable'] = false # Handled by nginx-proxy already
         nginx['listen_port'] = 80
         nginx['listen_https'] = false # Handled by nginx-proxy already
