--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,20 +12,19 @@ services:
       LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
       GITLAB_OMNIBUS_CONFIG: |
         external_url 'https://${HOSTNAME}'
-        gitlab_rails['gitlab_shell_ssh_port'] = 2222
-        letsencrypt['enable'] = false # Handled by nginx-proxy already
         nginx['listen_port'] = 80
-        nginx['listen_https'] = false # Handled by nginx-proxy already
+        letsencrypt['enable'] = false #using nginx letsencrypt proxy instead
+        nginx['listen_https'] = false #using nginx letsencrypt proxy instead
     expose:
       - 80
       - 443
     ports:
-      - '2222:2222'
+      - '22:22'
     volumes:
       - '/srv/gitlab/config:/etc/gitlab'
       - '/srv/gitlab/logs:/var/log/gitlab'
       - '/srv/gitlab/data:/var/opt/gitlab'
-      - "/srv/gitlab/backups:/var/opt/gitlab/backups"
+      - '/srv/gitlab/backups:/var/opt/gitlab/backups'
 
 networks:
   default:
