Enacts nginx proxy for Teamcity https routing

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
 
 # Nginx Proxy
-HOSTNAME=gitlab.DOMAIN.com
+GITLAB_HOSTNAME=gitlab.DOMAIN.com
+TEAMCITY_HOSTNAME=teamcity.DOMAIN.com
 LETSENCRYPT_EMAIL=email@email.com
