--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
 # Nginx Proxy
-GITLAB_HOSTNAME=gitlab.DOMAIN.com
-TEAMCITY_HOSTNAME=teamcity.DOMAIN.com
+GITLAB_HOSTNAME=gitlab.openrsc.com
+GITLAB_HOSTNAME2=orsc.dev
+TEAMCITY_HOSTNAME=teamcity.openrsc.com
 LETSENCRYPT_EMAIL=email@email.com
