--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       LETSENCRYPT_HOST: ${GITLAB_HOSTNAME},${GITLAB_HOSTNAME2}
       LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://${HOSTNAME}'
+        external_url 'https://${GITLAB_HOSTNAME}'
         nginx['listen_port'] = 80
         letsencrypt['enable'] = false #using nginx letsencrypt proxy instead
         nginx['listen_https'] = false #using nginx letsencrypt proxy instead
