--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ GITLAB_HOSTNAME=gitlab.openrsc.com
 GITLAB_HOSTNAME2=orsc.dev
 TEAMCITY_HOSTNAME=teamcity.openrsc.com
 LETSENCRYPT_EMAIL=email@email.com
+
+# MySQL
+MARIADB_ROOT_USER=root
+MARIADB_ROOT_PASSWORD=root
