--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,34 @@ services:
       - './datadir:/data/teamcity_server/datadir'
       - '/var/log/teamcity:/opt/teamcity/logs'
 
+  mysqldb:
+    image: mariadb:latest
+    container_name: mysql
+    restart: always
+    env_file:
+      - ".env"
+    command: [
+      '--wait_timeout=360000',
+      '--log-bin=bin.log',
+      '--log-bin-index=bin-log.index',
+      '--max_binlog_size=100M',
+      '--binlog-format=MIXED',
+      '--slow-query-log',
+      '--general_log=1',
+      '--expire_logs_days=10',
+      '--sync_binlog=1'
+    ]
+    environment:
+      - MYSQL_DATABASE=mysql
+      - MYSQL_ROOT_USER=${MARIADB_ROOT_USER}
+      - MYSQL_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD}
+      - MYSQL_ALLOW_EMPTY_PASSWORD=no
+    ports:
+      - "3306:3306"
+    volumes:
+      - "./mariadb/mysql:/var/lib/mysql"
+      - "./mariadb/innodb.cnf:/etc/mysql/conf.d/innodb.cnf:ro"
+
 networks:
   default:
     external:
