Splits off TeamCity to it's own repository

--- a/.env
+++ b/.env
@@ -3,9 +3,4 @@
 # Nginx Proxy
 GITLAB_HOSTNAME=gitlab.openrsc.com
 GITLAB_HOSTNAME2=orsc.dev
-TEAMCITY_HOSTNAME=teamcity.openrsc.com
-LETSENCRYPT_EMAIL=email@email.com
-
-# MySQL
-MARIADB_ROOT_USER=root
-MARIADB_ROOT_PASSWORD=root
+LETSENCRYPT_EMAIL=EMAIL@gmail.com
