--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 #!/usr/bin/env bash
 
 # Nginx Proxy
-GITLAB_HOSTNAME=gitlab.openrsc.com
-GITLAB_HOSTNAME2=orsc.dev
-LETSENCRYPT_EMAIL=EMAIL@gmail.com
+GITLAB_HOSTNAME=orsc.dev
